config-k8s/defTelemetry/prometheus/virtualService-def.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: istio-system
spec:
  hosts:
    - prometheus.usvc.algo.fit
  gateways:
    - prometheus-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: prometheus
            port:
              number: 9090
